# Info_II_Lab

Practica_1/: CMakeLists.txt  Ejercicio_1.cpp  Ejercicio_10.cpp  Ejercicio_11.cpp  Ejercicio_12.cpp  Ejercicio_2.cpp  Ejercicio_3.cpp  Ejercicio_4.cpp  Ejercicio_5.cpp  Ejercicio_6.cpp  Ejercicio_7.cpp  Ejercicio_8.cpp  Ejercicio_9.cpp  Ejercicios.h  main.cpp
Practica_2/: CMakeLists.txt  Problems.h  main.cpp  problem1.cpp  problem1.h  problem10.cpp  problem11.cpp  problem13.cpp  problem15.cpp  problem17.cpp  problem3.cpp  problem5.cpp  problem6.cpp  problem7.cpp  problem9.cpp  problemas en arduino.txt
Practica_3/: CMakeLists.txt  Definition.h  LZ78.cpp  RLE.cpp  Texto.txt  main.cpp
